# WebRTCAudioProcess

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/feifei/webrtcaudioprocess/: AudioEffectInterface.java  AudioEffectUtils.java  MainActivity.java
app/src/main/java/com/feifei/webrtcaudioprocess/AudioEffect/: AudioEffectInterface.java  AudioEffectUtils.java
app/src/main/java/com/feifei/webrtcaudioprocess/AudioEffectEngine/: AudioEffectInterface.java  AudioEffectUtils.java  AutomaticGainControl.java  EchoCancellationBean.java  NoiseSuppressionBean.java
app/src/main/java/com/feifei/webrtcaudioprocess/AudioResample/: AudioResampleInterface.java  AudioResampleUtils.java
app/src/main/jni/: Android_JNI.cpp  audio_effect_native.cpp
app/src/main/jni/include/: com_feifei_webrtcaudioprocess_jni_AudioEffect.h  com_feifei_webrtcaudioprocess_jni_AudioResample.h
app/src/main/jni/src/: audio_effect_native.cpp
app/src/main/jni/webrtc/: Android.mk
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
audio-effect/: CMakeLists.txt
audio-effect/inc/: com.feifei.webrtcaudioprocess_jni_AudioEffectEngine.h
audio-effect/src/: webrtc_native.cpp
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt
jni/include/: com_feifei_webrtcaudioprocess_jni_AudioEffect.h  com_feifei_webrtcaudioprocess_jni_AudioEffectEngine.h
jni/src/: audio_effect_engine_native.cpp  audio_effect_native.cpp
jni/src/webrtc/: CMakeLists.txt
jni/src/webrtc/base/: CMakeLists.txt
testFiles/agc/: test.pcm
testFiles/hpf/: test.pcm
testFiles/ns/: bad-in.pcm  bad.pcm  good-in.pcm  good.pcm  test.pcm
